--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,14 @@ main {
   margin-top: 85px;
 }
 
+
 .btn {
   margin-top: 20px;
+}
+
+/* Footer */
+footer {
+  margin-bottom: 30px;
 }
 
 /* Teste */
